style/style.css
:root {
  --ff: 'Inter', system-ui;

  --fs-400: 0.875rem;
  --fs-500: 1.5rem;

  --fw-400: 400;
  --fw-600: 600;
  --fw-700: 700;

  --primary: 159, 94%, 57%;

  --clr-primary: hsl(var(--primary));
  --clr-primary-accent: hsl(var(--primary), 0.4);

  --clr-white: hsl(0, 0%, 100%);
  --clr-white-accent: hsl(0, 0%, 100%, 0.8);
  --clr-grey: hsl(0, 0%, 20%);
  --clr-dark-grey: hsl(0, 0%, 12%);
  --clr-off-black: hsl(0, 0%, 8%);

  --clr-linkedIn: hsl(210, 90.2%, 40%);
  --clr-fem: hsl(227, 44.9%, 44.1%);
  --clr-ig: hsl(333, 67.8%, 50%);

  --spacing-m: 1.75rem;

  --letter-spacing: 2px;

  --img-size: 6.5rem;

  --boxShadow-offset: 1px 5px 15px;

  --border-radius-400: 1rem;
  --border-radius-50: 50%;
}

/* makes sizing simpler */
*,
*::before,
*::after {
  box-sizing: border-box;
}

:focus {
  outline: solid 2px var(--clr-primary);
}

/* remove default spacing */
/* force styling of type through styling, rather than elements */
* {
  margin: 0;
  padding: 0;
  /* font: inherit; */
}

/* dark mode user-agent-styles */
/* improves punctuation in supported browsers */
html {
  color-scheme: dark light;
  hanging-punctuation: first last;
}

/* min body height */
body {
  min-height: 100svh;
  padding-block: 2rem;

  font-size: var(--fs-400);
  font-family: var(--ff);
  color: var(--clr-white);
  background: var(--clr-off-black);
}

/* responsive images/videos */
img,
picture,
svg,
video {
  display: block;
  max-width: 100%;
}

img {
  height: auto;
  vertical-align: middle;
  font-style: italic;
  background-repeat: no-repeat;
  background-size: cover;
  shape-margin: 0.75rem;
}

/* Improved heading in supported browsers */
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
  font-weight: var(--fw-400);
}

/* improve readability with max-width on paragraphs and lists */
/* prevent orphans in supported browsers */
p,
q,
li {
  max-width: var(--p-max-width, 65ch);
  text-wrap: pretty;
}

menu,
ul,
ol {
  list-style: none;
}

/* Utility class to hide elements but keep it accessible */
.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* Utility class to center items mainly  */
.grid-items-center {
  display: grid;
  place-items: center;
}

.glow {
  position: relative;
  z-index: 1;
  width: min(85%, 22.5rem);
  border-radius: var(--border-radius-400);
}

article {
  background: var(--clr-dark-grey);
  padding: clamp(1.25rem, 7vw, 2.5rem);
  border-radius: var(--border-radius-400);

  position: relative;
  z-index: 1;
}

article section {
  width: 100%;
}

article,
figure {
  gap: var(--spacing-m) 0;
}

figure img {
  width: var(--img-size);
  aspect-ratio: 1;
  border: 5px solid transparent;
  border-radius: var(--border-radius-50);
}

figcaption {
  text-align: center;
}

figcaption h2 {
  font-size: var(--fs-500);
  margin-bottom: 0.75rem;
}

figure p {
  color: var(--clr-primary);
  font-weight: var(--fw-700);
  letter-spacing: var(--letter-spacing);
}

q {
  display: block;
  text-align: center;
}

menu {
  gap: 1rem 0;
}

menu li {
  width: 100%;
  text-align: center;
}

.link {
  display: block;
  color: var(--clr-white-accent);
  font-weight: var(--fw-600);
  text-decoration: none;

  background: var(--clr-grey);
  border-radius: 0.75rem;
  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
  padding: 1rem 0;
  transition: color 0.2s ease-in-out, box-shadow 0.2s ease-in-out,
    transform 0.2s ease-in-out, text-shadow 0.2s ease-in-out,
    letter-spacing 0.2s ease-in-out;
}

.link:hover {
  color: var(--clr-white);
  text-shadow: var(--clr-white) 1px 0 10px;
}

/* If user has reduced motion turned on, animations won't show. */
@media (prefers-reduced-motion: no-preference) {
  /* Makes a gradient glo surrounding the main element */
  .glow::after {
    content: '';
    position: absolute;
    inset: 0;
    mix-blend-mode: color-burn;
    background: conic-gradient(
      red,
      magenta,
      blue,
      limegreen,
      yellow,
      darkorange,
      red
    );
    /* background-size needed to make it move. */
    background-size: 200% 200%;
    filter: blur(2rem);
    animation: moveGlow 20s alternate infinite;
    z-index: -1;
  }

  /* Specific glow styling for the image */
  figure .glow::after {
    width: var(--img-size);
    aspect-ratio: 1;
    filter: blur(0);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: var(--border-radius-50);
    background: conic-gradient(
      var(--clr-primary),
      var(--clr-primary-accent),
      var(--clr-white),
      var(--clr-primary-accent),
      var(--clr-primary)
    );
    background-size: 200% 200%;
  }

  @keyframes moveGlow {
    0% {
      background-position: top left;
    }
    25% {
      background-position: bottom right;
    }
    50% {
      background-position: top right;
    }
    75% {
      background-position: bottom left;
    }
  }

  /* Hover animation. */
  .link:hover {
    box-shadow: var(--boxShadow-offset) var(--clr-primary-accent);
    transform: translateY(-3px);
    letter-spacing: var(--letter-spacing);
  }

  /* Hover animation specific to the social link. */
  .link.github:hover {
    box-shadow: var(--boxShadow-offset) -4px var(--clr-white-accent);
  }
  .link.fem:hover {
    box-shadow: var(--boxShadow-offset) var(--clr-fem);
  }
  .link.linkedin:hover {
    box-shadow: var(--boxShadow-offset) var(--clr-linkedIn);
  }
  .link.ig:hover {
    box-shadow: var(--boxShadow-offset) var(--clr-ig);
  }

  .link:active {
    transform: translateY(-1px);
  }
}

